[workspace]
members = [
    "bin",
    "crates/block-fetcher",
    "crates/block-syncer",
    "crates/client-ext",
    "crates/downloader",
]
resolver = "2"

[workspace.package]
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["concurrency", "cryptography::cryptocurrencies", "emulators"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "vm"]
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/network-watchtower"
version = "0.0.1"

[workspace.dependencies]
anyhow = "1.0"

async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
fuel-block-fetcher = { path = "crates/block-fetcher" }

fuel-block-syncer = { path = "crates/block-syncer" }
fuel-core = { version = "0.44.0" }
fuel-core-bin = { version = "0.44.0", default-features = false, features = ["rocksdb-production", "relayer"] }
fuel-core-client = { version = "0.44.0" }
fuel-core-client-ext = { path = "crates/client-ext" }
fuel-core-compression = { version = "0.44.0" }
fuel-core-compression-service = { version = "0.44.0" }
fuel-core-poa = { version = "0.44.0" }
fuel-core-relayer = { version = "0.44.0" }
fuel-core-services = { version = "0.44.0" }
fuel-core-storage = { version = "0.44.0" }
fuel-core-types = { version = "0.44.0", features = ["da-compression"] }
fuel-network-watchtower-downloader = { path = "crates/downloader" }
futures = "0.3"
futures-util = "0.3"
hex = { version = "0.4", features = ["serde"] }
itertools = "0.14"
postcard = "1"
tikv-jemallocator = "0.5"
tokio = { version = "1.47", default-features = false }
tracing = "0.1"
tracing-attributes = "0.1"
url = { version = "2.2" }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "unwind"
