[package]
name = "fuel-block-fetcher"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
description = "Fetcher of the block from the Fuel network via GraphQL"

[dependencies]
anyhow = { workspace = true }
fuel-core-client = { workspace = true }
fuel-core-client-ext = { workspace = true }
fuel-core-compression = { workspace = true }
fuel-core-types = { workspace = true, features = ["test-helpers"] }
futures = { workspace = true }
itertools = { workspace = true }
postcard = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
