[package]
name = "fuel-block-syncer"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
description = "Syncer of the block from the Fuel network via GraphQL"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
fuel-block-fetcher = { workspace = true }
fuel-core = { workspace = true }
fuel-core-compression = { workspace = true }
fuel-core-compression-service = { workspace = true }
fuel-core-poa = { workspace = true }
fuel-core-relayer = { workspace = true }
fuel-core-storage = { workspace = true }
fuel-core-types = { workspace = true }
futures = { workspace = true }
humantime = "2.1.0"
itertools = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
