[package]
name = "fuel-core-client-ext"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
build = "build.rs"

[features]
fault-proving = ["fuel-core-client/fault-proving", "fuel-core-types/fault-proving"]

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
cynic = { version = "3.1", features = ["http-reqwest"] }
fuel-core-client = { workspace = true }
fuel-core-types = { workspace = true }
itertools = { workspace = true }

[build-dependencies]
fuel-core-client = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
