[package]
name = "fuel-network-watchtower-downloader"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
alloy = { version = "0.15.11", features = [
    "full",
    "rpc-types-debug",
    "rpc-types-trace",
    "json-rpc",
    "rpc-client",
    "eips",
] }
anyhow = { workspace = true }
clap = { workspace = true }
fuel-block-committer-encoding = { git = "https://github.com/FuelLabs/fuel-block-committer" }
fuel-core-compression = { workspace = true }
fuel-core-types = { workspace = true }
futures-util = "0.3"
hex = "0.4.3"
postcard = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream = "0.1.16"
tracing = { workspace = true }

[dev-dependencies]
proptest = "1.0"
rand = "0.8"
tokio = { workspace = true, features = ["test-util"] }
